--- a/index.Rmd
+++ b/index.Rmd
@@ -7,12 +7,31 @@ site: distill::distill_website
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+library(tidyverse)
+library(ggthemes)
 
 # Learn more about creating websites with Distill at:
 # https://rstudio.github.io/distill/website.html
 
 # Learn more about publishing to GitHub Pages at:
+```
+
+
+```{r car-plot}
 # https://rstudio.github.io/distill/publish_website.html#github-pages
+
+mtcars %>% 
+  select(mpg, wt) %>% 
+  ggplot(aes(wt, mpg)) +
+  geom_point() +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE) +
+  theme_clean()+
+  labs(
+  title = "Fuel Efficiency and Weight",
+  subtitle = "Heavier cars are less fuel efficient",
+  y = "MPG",
+  x = "Weight (1000s of lbs)",
+  caption = "Henderson and Vellerman (1981)")
 
 ```
 
